Fixed button alignment

--- a/public/css/meetup.css
+++ b/public/css/meetup.css
@@ -58,11 +58,14 @@
     background-color: indianred;
     color: white;
     padding: 14px 20px;
-    margin: 8px 5px;
     border: none;
     cursor: pointer;
     border-radius: 20px;
     font-size: 15px;
+}
+
+.date {
+    text-align: right;
 }
 
 .accept {
